--- a/package.json
+++ b/package.json
@@ -8,11 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
+    "axios": "^0.19.2",
+    "base-64": "^0.1.0",
     "expo": "~37.0.3",
+    "expo-auth-session": "~1.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.9",
+    "react-navigation-animated-switch": "^0.5.12",
+    "react-navigation-header-buttons": "^4.0.2",
+    "react-navigation-stack": "^2.5.1",
+    "react-navigation-tabs": "^2.8.13",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "spotify-web-api-js": "^1.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
