--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "base-64": "^0.1.0",
     "expo": "~37.0.3",
     "expo-auth-session": "~1.2.1",
+    "firebase": "^7.14.6",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-elements": "^2.0.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.7.3",
