added firebase token refresh

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ npm-debug.*
 web-build/
 web-report/
 misc/secrets.js
-authentication/firebase_auth.js
+misc/firebase_secrets.js
+constants/firebaseConfig.js
 
 # macOS
 .DS_Store
