--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base-64": "^0.1.0",
     "expo": "~37.0.3",
     "expo-auth-session": "~1.2.1",
+    "expo-linear-gradient": "~8.1.0",
     "firebase": "^7.14.6",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-text-ticker": "^1.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-animated-switch": "^0.5.12",
