--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~37.0.3",
     "expo-auth-session": "~1.2.1",
     "expo-linear-gradient": "~8.1.0",
+    "express": "^4.17.1",
     "firebase": "^7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -36,8 +37,10 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "metro-react-native-babel-preset": "^0.60.0",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true
 }
