--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "expo": "~37.0.3",
@@ -26,6 +28,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-text-ticker": "^1.4.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-animated-switch": "^0.5.12",
