--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-navigation-tabs": "^2.8.13",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-web-browser": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
