--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/partify_logo.png",
+    "icon": "./assets/partify_logo_v2.png",
     "splash": {
       "image": "./assets/partify_splash.png",
       "resizeMode": "cover",
