--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.4",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/partify_logo_v5.png",
     "splash": {
@@ -21,13 +21,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.sriramalagappan.partify",
-      "buildNumber": "1.0.4"
+      "buildNumber": "1.0.0"
     },
     "android": {
       "package": "com.sriramalagappan.partify",
-      "versionCode": 1,
+      "versionCode": 2,
       "permissions": []
     },
     "scheme": "partify"
