--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "expo": "~37.0.3",
     "expo-auth-session": "~1.2.1",
     "expo-linear-gradient": "~8.1.0",
+    "expo-web-browser": "~8.2.1",
     "express": "^4.17.1",
-    "firebase": "^7.9.0",
+    "firebase": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -37,8 +38,7 @@
     "react-navigation-tabs": "^2.8.13",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-web-browser": "~8.2.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
